# FingerTree

./: .gitignore  CLAESSEN_REFERENCE.md  CLAUDE.md  IMPLICITQUEUE_REFERENCE.md  LICENSE  Makefile  README.md  _CoqProject  coq-finger-tree.opam  coq-lazy-analysis.opam  finger-plan.md
.githooks/: commit-msg
.github/workflows/: LazyAnalysis.yml  ci.yml
docs/: CONCAT_SPEC_PLAN.md  ENGINEERING_NOTES.md  REFERENCE.md  SPLIT_FAITHFUL_PLAN.md  SPLIT_NOTE.md  TAIL_ANALYSIS.md
scripts/: audit.sh
src/: Approx.v  ApproxM.v  Audit.v  BankersQueue.v  DemandSemantics.v  Finger.v  FingerConcat.v  FingerConcatAlt.v  FingerCons.v  FingerCore.v  FingerHead.v  FingerMonoid.v  FingerPhysicist.v  FingerSize.v  FingerSnoc.v  FingerSplit.v  FingerTail.v  ImplicitQueue.v  InsertionSort.v  Interfaces.v  List.v  ListA.v  Prod.v  QueueInterface.v  Relations.v  Tick.v
wip/: README.md  deeparm.v  flat_retuple.v  inspect.v  roundtrip.v  step_lemma.v  val_thunk.v
