opam-version: "2.0"
version: "dev"

maintainer:"Anonymized"
license: "MIT"

synopsis: "The Coq formalization of the paper Story of Your Lazy Function's Life"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.16"}
  "coq-equations" {>= "1.3"}
  "coq-hammer-tactics" {>= "1.3.2"}
]
